# tg-translator

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
